# fastmcp-hybrid-auth

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ARCHITECTURE.md  AZURE_SETUP.md  KEYCLOAK_SETUP.md
scripts/: generate_keys.py  run.sh  setup.sh
src/: __init__.py  config.py  server.py
src/auth/: __init__.py  authorization.py  keycloak_client.py  provider.py  token_exchange.py
src/resources/: __init__.py  example_resources.py
src/tools/: __init__.py  authorized_tools.py  example_tools.py
src/utils/: __init__.py  logging_config.py
tests/: __init__.py  conftest.py  test_config.py
